# openaq_cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  api_calls.c  api_calls.h  args.c  args.h  core.c  core.h  data.c  data.h  date_util.c  date_util.h  io.c  io.h  json.c  json.h  main.c  openaq_cli.c  string_util.c  string_util.h
test/: CMakeLists.txt  tests.c  tests.h
